--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Where to go for a break?</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Quicksand" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/jquery-3.3.1.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
@@ -11,8 +12,8 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h1>Get Me Out of Here</h1>
-        <h2>A quiz for when we need to take a break from this reality</h2>
+        <h1 id="title">Get Me Out of Here</h1>
+        <h4>A quiz for when we need to take a break from this reality</h4>
       </div>
       <div class="container-fluid">
         <form id="form">
@@ -54,7 +55,7 @@
             </select>
           </div>
           <div class="row">
-            <button type="submit" class="btn btn-success active">It's Go Time!</button>
+            <button type="submit" class="btn btn-success btn-lg active">Go Time!</button>
           </div>
         </form>
         <div class="row">
