modify answer row, add more text and styling.

--- a/index.html
+++ b/index.html
@@ -59,20 +59,26 @@
           </div>
         </form>
         <div class="row">
+          <div id="youranswer">
+            <h4>The book for you to read and take a reality getaway is:</h4>
+          </div>
           <div id="marquez">
-            <p>You got A Hundred Years of Solitude!</p>
+            <h3>"A Hundred Years of Solitude" by Gabriel García Márquez!</h3>
           </div>
           <div id="butler">
-            <p>You got The Parable of The Sower!</p>
+            <h3>"The Parable of The Sower" by Octavia Butler!</h3>
           </div>
           <div id="leguin">
-            <p>You got The Left Hand of Darkness!</p>
+            <h3>"The Left Hand of Darkness" by Ursula K. Le Guin!</h3>
+          </div>
+          <div id="readit">
+            <h4>Go read it and see why, you can thank us for the suggestion later.</h4>
           </div>
           <div id="tie">
-            <p>Oh, it's a tie. Search deep within your soul and change one of your answers to find your ideal reality getaway.</p>
+            <h3 class="text-danger">Oh, it's a tie. Search deep within your soul and change one of your answers to find your ideal reality getaway.</h3>
           </div>
           <div id="error">
-            <p>Oh, oh, you have to actually answer each question. We are not mindreaders here.</p>
+            <h3 class="text-danger">Oh, oh, you have to actually answer each question. We are not mindreaders here.</h3>
           </div>
         </div>
       </div>
