--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="jumbotron">
         <h1 id="title">Get Me Out of Here</h1>
-        <h4>A quiz for when we need to take a break from this reality</h4>
+        <h4>A quiz for when we need to take a break from this reality -through reading.</h4>
       </div>
       <div class="container-fluid">
         <form id="form">
